--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,10 +5,8 @@ android {
     buildToolsVersion "25.0.2"
     defaultConfig {
         applicationId "pl.mazek.robotcontroll"
-        minSdkVersion 23
+        minSdkVersion 22
         targetSdkVersion 25
-        versionCode 1
-        versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -20,10 +18,11 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     testCompile 'junit:junit:4.12'
     compile 'com.google.android.gms:play-services-appindexing:8.4.0'
+    compile project(':openCVLibrary320')
 }
